# ik_solve_nn

./: .gitignore  Copy_of_Untitled12.ipynb  pyproject.toml
src/ik_solve_nn/: data.py  kinematics.py  models.py  train.py
src/scripts/: generate_dataset.py  train.py
