[project]
name = "ik-solve-nn"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "matplotlib>=3.8,<3.10",
    "numpy>=1.26,<2.0",
    "pandas>=2.2,<2.3",
    "seaborn>=0.13,<0.14",
    "torch>=2.4,<2.6",
    "tqdm>=4.66,<5",
]

[project.scripts]
ik-generate-dataset = "scripts.generate_dataset:main"
